# pasarelaBackend

./: .env.dev  .env.prod  Dockerfile.dev  Dockerfile.lunarvim  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  testSecrets.yml
nginx/: Dockerfile.prod  nginx.conf  nginx.prod.conf
src/core/: api.py  asgi.py  settings.py  urls.py
src/frontEnd/myComponents/: global.d.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src/home/: apps.py  models.py  panels.py  serializers.py  signals.py  urls.py  views.py  wagtail_hooks.py  widgets.py
src/home/migrations/: 0001_initial.py  0002_datapasajero.py  0002_datapasajero_percentaje.py  0003_datapasajero_numpasajeros.py  0003_datapasajero_refericode.py  0004_alter_datapasajero_finalprice_and_more.py  0004_datapasajero_finalprice_and_more.py  0005_datapasajero__created_at.py  0005_datapasajero_link.py  0006_datageneral.py  0006_datapasajero_status.py  0007_remove_apis_hmacsha256_apis_paypalclientid_and_more.py  0008_alter_datapasajero_email_alter_datapasajero_link_and_more.py  0009_datapasajero_numpasajerosinfante_and_more.py  0010_datageneral_terminosycondicioneseng.py  0011_datapasajero_link2_alter_datapasajero_link.py  0012_paquetemexico.py  0013_paquetemexico_unitarypricechildafter_and_more.py  0014_alter_datapasajero_percentaje_and_more.py
static/js/: components-library.es.js  components-library.umd.js  domloader.js  library.css  zustand_initializer.js
(+17 files in other folders)
